--- a/src/App.css
+++ b/src/App.css
@@ -12,16 +12,63 @@
   max-width: 600px;
 }
 
+#msgInput {
+  -webkit-text-size-adjust: 100%;
+  tab-size: 4;
+  font-feature-settings: "cv02", "cv03", "cv04", "cv11";
+  --scroll-mt: 9.875rem;
+  -webkit-font-smoothing: antialiased;
+  --tw-bg-opacity: 1;
+  --tw-space-y-reverse: 0;
+  box-sizing: border-box;
+  border: 0 solid #e5e7eb;
+  font-family: inherit;
+  margin: 0;
+  padding: 0;
+  --tw-ring-inset: ;
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  width: 100%;
+  appearance: none;
+  border-radius: 0.375rem;
+  background-color: transparent;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.5rem;
+  font-size: 1.25rem;
+  line-height: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(15 23 42 / var(--tw-text-opacity));
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0/0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
+    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
+    calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
+    var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(226 232 240 / var(--tw-ring-opacity));
+}
+
+#inputContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-bottom: 10px;
+}
+
 .header {
   text-align: center;
-  font-size: 32px;
   font-weight: 600;
+  margin: 4px, 0;
+  color: rgb(99, 102, 241);
 }
 
 .bio {
   text-align: center;
   color: gray;
-  margin-top: 16px;
+  margin-top: 9px;
 }
 
 .waveButton {
@@ -30,5 +77,4 @@
   padding: 8px;
   border: 0;
   border-radius: 5px;
-  
 }
