--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,14 @@
   max-width: 600px;
 }
 
+.loader {
+  width: max-content;
+  margin: 10px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #msgInput {
   -webkit-text-size-adjust: 100%;
   tab-size: 4;
@@ -65,7 +73,7 @@
   text-align: center;
   font-weight: 600;
   margin: 4px, 0;
-  color: rgb(99, 102, 241);
+  color: #c1d5c4;
 }
 
 .bio {
