--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,15 @@
   position: relative;
 }
 
+.canvas {
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 .dataContainer {
   display: flex;
   flex-direction: column;
@@ -72,14 +81,14 @@
 .header {
   text-align: center;
   font-weight: 600;
-  margin: 4px, 0;
-  color: #c1d5c4;
+  margin: 4px 0;
+  color: rgb(99, 102, 241);
 }
 
 .bio {
   text-align: center;
   color: gray;
-  margin-top: 9px;
+  margin-top: 8px;
 }
 
 .waveButton {
